--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   </head>
   <body>
     <div id="container">
+      <div>
+        <h1>Cyber</h1>
+        <p>Objevte svět kybernetické bezpečnosti</p>
+      </div>
+      <a href="/email.html"><button>Start</button></a>
+    </div>
+    <!-- <div id="one" class="dot"></div>
+    <div id="two" class="dot"></div>
+    <div id="container">
       <div id="top">
         <h1 id="logo">Cyber</h1>
         <div id="navwrapper">
@@ -39,6 +48,16 @@
       <ul>
         <li><a href="web.html">Start</a></li>
       </ul>
-    </div>
+      <div id="main">
+        <div id="contetnt">
+          <h1>Objevte svět kybernetické bezpečnosti</h1>
+          <button>Začít</button>
+        </div>
+        <div id="imgContainer">
+          <img src="/assets/mainImg.png " alt="" />
+        </div>
+      </div>
+      <div id="bottomwrapper"></div>
+    </div> -->
   </body>
 </html>
