--- a/email.html
+++ b/email.html
@@ -39,6 +39,23 @@
     <div id="sidebar">
       <h1 id="logo">Cyber</h1>
       <img src="/assets/Snímek obrazovky 2025-03-26 174736.png" alt="" />
+      <div id="timeline">
+        <h2>Status</h2>
+        <div class="levels">
+          <h5 id="levelOne">Level 1</h5>
+          <img src="/assets/mark.png" alt="" />
+        </div>
+        <div class="pipe"></div>
+        <div class="levels">
+          <h5 id="levelTwo">Level 2</h5>
+          <!-- <img  src="/assets/mark.png" alt="" /> -->
+        </div>
+        <div class="pipe"></div>
+        <div class="levels">
+          <h5 id="levelThree">Level 3</h5>
+          <!-- <img src="/assets/mark.png" alt="" /> -->
+        </div>
+      </div>
     </div>
     <div id="main">
       <div class="window" id="draggableWindow">
@@ -52,7 +69,11 @@
         </div>
 
         <div class="content">
-          <span id="from">Od: petrnovak@seznam.cz</span>
+          <div id="headerContent">
+            <span id="from">Od: petrnovak@seznam.cz</span>
+            <button>Nahlásit</button>
+          </div>
+
           <hr />
           <span id="predmet">Předmět: Nová nabídka od dodavatele</span>
           <hr />
@@ -642,13 +663,5 @@
       </div>
     </div>
     <script src="fill.js"></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
   </body>
 </html>
