--- a/desktop.html
+++ b/desktop.html
@@ -31,6 +31,8 @@
         </div>
       </div>
     </div>
-    <div id="navbar"></div>
+    <div id="navbar">
+      <img src="/assets/taskbar.png" alt="" />
+    </div>
   </body>
 </html>
