--- a/email.html
+++ b/email.html
@@ -18,7 +18,7 @@
       .
       <span>Email</span>
       <a href="desktop.html"
-        ><img id="close" src="/assets/whiteClose.svg" alt=""
+        ><img id="closePage" src="/assets/whiteClose.svg" alt=""
       /></a>
     </div>
     <div id="info">
@@ -47,23 +47,6 @@
       <div id="sidebar">
         <h1 id="logo">Cyber</h1>
         <img src="/assets/Snímek obrazovky 2025-03-26 174736.png" alt="" />
-        <div id="timeline">
-          <h2>Status</h2>
-          <div class="levels">
-            <h5 id="levelOne">Level 1</h5>
-            <img src="/assets/mark.png" alt="" />
-          </div>
-          <div class="pipe"></div>
-          <div class="levels">
-            <h5 id="levelTwo">Level 2</h5>
-            <!-- <img  src="/assets/mark.png" alt="" /> -->
-          </div>
-          <div class="pipe"></div>
-          <div class="levels">
-            <h5 id="levelThree">Level 3</h5>
-            <!-- <img src="/assets/mark.png" alt="" /> -->
-          </div>
-        </div>
       </div>
       <div id="main">
         <div class="window" id="draggableWindow">
