--- a/email.html
+++ b/email.html
@@ -89,16 +89,16 @@
 
             <hr />
             <span id="predmet"
-              >Předmět: 🛑 Problém s doručením vaší zásilky č. #CZ847263</span
+              >Předmět: 🛑 Problém s doručením vaší zásilky č. #CZ747253</span
             >
             <hr />
             <p id="mesage">
               Vážený zákazníku,<br /><br />
-              během přepravy vaší zásilky č. #CZ847263 došlo k neočekávanému
+              během přepravy vaší zásilky č. #CZ747253 došlo k neočekávanému
               problému, který znemožnil doručení na vámi uvedenou adresu.
               Abychom mohli balíček znovu odeslat, prosíme o ověření
               doručovacích údajů co nejdříve.<br /><br />
-              📦 Detaily zásilky: <br /><br />Číslo balíčku: #CZ847263<br />
+              📦 Detaily zásilky: <br /><br />Číslo balíčku: #CZ747253<br />
               Stav: Pozastaveno – chybějící informace Poslední pokus o doručení:
               25. března 2025 <br />Prosím klikněte na níže uvedený odkaz a
               potvrďte vaše údaje:<br /><br />
@@ -119,13 +119,33 @@
           </div>
           <img src="/assets/zasilkovna.png" alt="" />
           <h1>Přihlášení</h1>
-
-          <input type="text" placeholder="E-mail" id="email" />
-          <input type="password" placeholder="Heslo" id="password" />
-          <button id="submitBtn">Odeslat</button>
+          <form action="">
+            <input
+              type="email"
+              placeholder="E-mail"
+              id="emailInputLevel1"
+              required
+            />
+            <input
+              type="password"
+              placeholder="Heslo"
+              id="passwordInputLevel1"
+              required
+            />
+            <button id="submitBtn">Odeslat</button>
+          </form>
         </div>
 
         <img src="/assets/Snímek obrazovky 2025-03-26 175050.png" alt="" />
+        <!-- 
+        
+
+
+!Main Content
+
+
+
+-->
         <div id="mainContent">
           <div class="item | spItem" id="email2">
             <input type="checkbox" /><label for="" class="name"
@@ -140,10 +160,10 @@
           </div>
           <div class="item | spItem" id="email1">
             <input type="checkbox" /><label for="" class="name"
-              >🛑 Problém s doručením vaší zásilky č. #CZ847263</label
+              >🛑 Problém s doručením vaší zásilky č. #CZ747253</label
             >
             <p class="content">
-              Vážený zákazníku, během přepravy vaší zásilky č. #CZ847263 došlo k
+              Vážený zákazníku, během přepravy vaší zásilky č. #CZ747253 došlo k
               neočekávanému problému.....
             </p>
             <div id="new">Nový</div>
