--- a/email.html
+++ b/email.html
@@ -147,18 +147,7 @@
 
 -->
         <div id="mainContent">
-          <div class="item | spItem" id="email2">
-            <input type="checkbox" /><label for="" class="name"
-              >🛑 Problém s asdasdasdasdasdas vaší zásilky č. #CZ847263</label
-            >
-            <p class="content">
-              Vážený zákazníku, během přepravy vaší zásilky č. #CZ847263 došlo k
-              neočekávanému problému.....
-            </p>
-            <div id="new">Nový</div>
-            <span class="date"></span>
-          </div>
-          <div class="item | spItem" id="email1">
+          <div class="item | spItem" id="emailThree">
             <input type="checkbox" /><label for="" class="name"
               >🛑 Problém s doručením vaší zásilky č. #CZ747253</label
             >
@@ -169,6 +158,36 @@
             <div id="new">Nový</div>
             <span class="date"></span>
           </div>
+          <div class="item | spItem" id="emailTwo">
+            <input type="checkbox" /><label for="" class="name"
+              >🛑 Problém s asdasdasdasdasdas vaší zásilky č. #CZ847263</label
+            >
+            <p class="content">
+              Vážený zákazníku, během přepravy vaší zásilky č. #CZ847263 došlo k
+              neočekávanému problému.....
+            </p>
+            <div id="new">Nový</div>
+            <span class="date"></span>
+          </div>
+          <div class="item | spItem" id="emailOne">
+            <input type="checkbox" /><label for="" class="name"
+              >🛑 Problém s doručením vaší zásilky č. #CZ747253</label
+            >
+            <p class="content">
+              Vážený zákazníku, během přepravy vaší zásilky č. #CZ747253 došlo k
+              neočekávanému problému.....
+            </p>
+            <div id="new">Nový</div>
+            <span class="date"></span>
+          </div>
+          <!-- 
+
+
+
+            Placeholder for emails
+
+
+           -->
           <div class="item">
             <input type="checkbox" /><label for="" class="name"
               >Nová nabídka od dodavatele</label
@@ -734,10 +753,10 @@
         </div>
       </div>
     </div>
-    <script src="levels.js"></script>
-    <script src="ending.js"></script>
-    <script src="fill.js"></script>
-    <script src="windows.js"></script>
-    <script src="dataCatcher.js"></script>
+    <script type="module" src="levels.js"></script>
+    <script type="module" src="fill.js"></script>
+    <script type="module" src="ending.js"></script>
+    <script type="module" src="windows.js"></script>
+    <script type="module" src="dataCatcher.js"></script>
   </body>
 </html>
