--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Cyber</h1>
         <p>Objevte svět kybernetické bezpečnosti</p>
       </div>
-      <a href="/email.css"><button>Start</button></a>
+      <a id="starter" href="/email.html"><button>Start</button></a>
     </div>
     <!-- <div id="one" class="dot"></div>
     <div id="two" class="dot"></div>
@@ -59,5 +59,6 @@
       </div>
       <div id="bottomwrapper"></div>
     </div> -->
+    <script src="levels.js"></script>
   </body>
 </html>
