--- a/index.html
+++ b/index.html
@@ -62,3 +62,9 @@
     <script src="levels.js"></script>
   </body>
 </html>
+
+<!-- TODO 1. Doděla test (Správné/špatné odpovědi) Dodělat Špatný konec a Dodělat durhý dobrý konec
+   todo:2. Dodělat END window. Vypsat chyby a money.
+   todo: 3. Zablokovat kliknutí na prošlé levleli. 
+   todo: 4. Zprovoznit zavíraní některých oken. 
+   todo: 5. Vylepšit otvírání a zavíránoi useraData window-->
