--- a/email.html
+++ b/email.html
@@ -351,7 +351,7 @@
       </div>
       <img src="/assets/teams.png" alt="" />
       <h1>Přihlášení</h1>
-      <form action="">
+      <form>
         <input
           type="email"
           placeholder="E-mail"
@@ -599,7 +599,7 @@
           </div>
           <img src="/assets/zasilkovna.png" alt="" />
           <h1>Přihlášení</h1>
-          <form action="">
+          <form>
             <input
               type="email"
               placeholder="E-mail"
