--- a/email.html
+++ b/email.html
@@ -388,7 +388,7 @@
       <hr />
       <span id="name"></span>
       <span id="surname"></span>
-      <span id="email"></span>
+      <span id="username"></span>
       <span id="password"></span>
       <hr />
       <div id="cardWrapper">
